--- a/src/custom.css
+++ b/src/custom.css
@@ -1,13 +1,22 @@
+li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+p{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .navbar-nav {
     flex-direction: row;
-    
+    align-items: center;
   }
 .navbar-nav .active a{
   color: green;
 }
 .navbar-custom {
     background-color : Plum;
-   
   }
 a{
   color:Black
@@ -25,13 +34,14 @@ a:hover {
    text-align: center;
    margin: 5%;
 }
-h2, h3 {
+h2, h3, h4 {
   color: #fff;
   text-align: center;
   margin-left: 10%;
   margin-right: 10%;
-  margin-top:2%;
-  margin-bottom:2%;
+  margin-top:5%;
+  margin-bottom:5%;
+  align-items: center;
 }
 
 
